# war-of-the-ring-ai

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg
data/: alphabetical.txt  cards.csv  characters.csv  hunt.csv  politics.csv  reinforcements.csv  worldmap.csv
tests/: test_data_entry.py  test_fsm.py  test_game_data.py  test_game_state.py  test_war_of_the_ring_ai.py  test_worldmap.py
war_of_the_ring_ai/: __init__.py  action_checks.py  action_flows.py  activities.py  agent.py  constants.py  context.py  fsm.py  fsm_impl.py  fsm_old.py  game_data.py  game_manager.py  game_objects.py  game_requests.py  game_state.py  game_states.py  todo.py
war_of_the_ring_ai/utils/: data_entry.py
