[tool.poetry]
authors = ["Bradley Sherman <sirrus233@gmail.com>"]
description = ""
name = "war-of-the-ring-ai"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = {git = "https://github.com/python/mypy", branch = "master"}
pre-commit = "^2.16.0"
pylint = "^2.13.5"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.pylint.messages_control]
disable = [
  "missing-function-docstring",
  "missing-class-docstring",
  "missing-module-docstring",
]

[tool.pylint.basic]
good-names = ["i", "x", "id"]
[tool.pylint.miscellaneous]
ignore-imports = "yes"
notes = [
  "FIXME",
  "XXX",
]

[tool.pytest.ini_options]
addopts = """\
  --cov=war_of_the_ring_ai \
  --cov-report=term-missing \
  --cov-branch \
"""
